first push front end

--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "mongoose": "^5.3.6",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-scripts": "1.0.14",
+    "redux": "^4.0.1",
+    "video-react": "^0.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
