--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.6"
+    "mongoose": "^5.3.6",
+    "react-background-video-player": "^1.1.5",
+    "react-bootstrap": "^0.32.4",
+    "react-native-video": "^3.2.1",
+    "react-router-dom": "^4.3.1",
+    "typed.js": "^2.0.9",
+    "video.js": "^7.2.4"
   }
 }
