--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
+    
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.6"
+    "jasmine-node": "^1.16.2",
+    "mongoose": "^5.3.6",
+    "request": "^2.88.0"
   }
 }
