--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "cd client && npm run start",
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "test": "jasmine-node spec/peopleSpec.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +20,11 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "deep-strict-equal": "^0.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.6"
+    "jasmine-node": "^1.16.2",
+    "mongoose": "^5.3.6",
+    "request": "^2.88.0"
   }
 }
