--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,12 @@
     "axios": "^0.18.0",
     "mongoose": "^5.3.6",
     "react": "^16.6.0",
+    "react-ace": "^6.2.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.14",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "video-react": "^0.13.0"
   },
