--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
-    
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +26,7 @@
     "react-bootstrap": "^0.32.4",
     "react-native-video": "^3.2.1",
     "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.5.0",
     "typed.js": "^2.0.9",
     "video.js": "^7.2.4"
   }
