--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "mongoose": "^5.3.6",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.14",
     "redux": "^4.0.1",
     "video-react": "^0.13.0"
