--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "deep-strict-equal": "^0.2.0",
     "mongoose": "^5.3.6",
     "react": "^16.6.0",
     "react-ace": "^6.2.0",
