--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "benchmark": "^2.1.4",
     "express": "^4.16.4",
     "if-env": "^1.0.4",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.6",
+    "process": "^0.11.10",
     "react-background-video-player": "^1.1.5",
     "react-bootstrap": "^0.32.4",
     "react-native-video": "^3.2.1",
     "react-router-dom": "^4.3.1",
+    "react-stopwatch": "^1.1.1",
     "reactstrap": "^6.5.0",
     "typed.js": "^2.0.9",
     "video.js": "^7.2.4"
