--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.2",
+    "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.6",
+    "mongoose": "^5.3.8",
     "react-background-video-player": "^1.1.5",
     "react-bootstrap": "^0.32.4",
     "react-native-video": "^3.2.1",
