--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react-background-video-player": "^1.1.5",
     "react-bootstrap": "^0.32.4",
     "react-native-video": "^3.2.1",
+    "react-popup": "^0.9.3",
     "react-router-dom": "^4.3.1",
     "react-stopwatch": "^1.1.1",
+    "reactjs-popup": "^1.3.1",
     "reactstrap": "^6.5.0",
     "typed.js": "^2.0.9",
     "video.js": "^7.2.4"
