--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "process": "^0.11.10",
     "react-background-video-player": "^1.1.5",
     "react-bootstrap": "^0.32.4",
+    "react-flashcard-app": "^1.3.1",
+    "react-flippy": "^0.1.2",
     "react-native-video": "^3.2.1",
     "react-router-dom": "^4.3.1",
     "react-stopwatch": "^1.1.1",
