--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "cd client && npm run start",
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "npm run build"
 
   },
   "author": "",
@@ -20,7 +20,6 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-
     "deep-strict-equal": "^0.2.0",
     "if-env": "^1.0.4",
     "request": "^2.88.0",
