--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-mongo": "^2.0.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "express-sessions": "^1.0.6",
     "if-env": "^1.0.4",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.8",
