--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
-
   },
   "author": "",
   "license": "ISC",
@@ -20,21 +19,21 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "deep-strict-equal": "^0.2.0",
-    "if-env": "^1.0.4",
-    "request": "^2.88.0",
     "bcrypt": "^3.0.2",
     "benchmark": "^2.1.4",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
+    "deep-strict-equal": "^0.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "if-env": "^1.0.4",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.8",
     "process": "^0.11.10",
     "react-ace": "^6.2.0",
     "react-background-video-player": "^1.1.5",
     "react-bootstrap": "^0.32.4",
+    "react-confirm-alert": "^2.0.6",
     "react-flashcard-app": "^1.3.1",
     "react-flippy": "^0.1.2",
     "react-native-video": "^3.2.1",
@@ -43,8 +42,8 @@
     "react-stopwatch": "^1.1.1",
     "reactjs-popup": "^1.3.1",
     "reactstrap": "^6.5.0",
+    "request": "^2.88.0",
     "typed.js": "^2.0.9",
     "video.js": "^7.2.4"
-
-}
+  }
 }
