--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "benchmark": "^2.1.4",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "deep-strict-equal": "^0.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "gravatar": "^1.8.0",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.3.8",
+    "mongoose": "^5.4.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "process": "^0.11.10",
     "react-ace": "^6.2.0",
     "react-background-video-player": "^1.1.5",
@@ -44,6 +49,7 @@
     "reactstrap": "^6.5.0",
     "request": "^2.88.0",
     "typed.js": "^2.0.9",
+    "validator": "^10.10.0",
     "video.js": "^7.2.4"
   }
 }
